@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.2
+Release: 0.4
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -465,7 +465,10 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
-* Thu Mar 13 2003 Jeff Johnson <jbj@redhat.com> 4.1.1-0.2
+* Fri Mar 14 2003 Jeff Johnson <jbj@redhat.com> 4.1.1-0.4
+- fix: short option help missing string terminator.
+
+* Fri Mar 14 2003 Jeff Johnson <jbj@redhat.com> 4.1.1-0.3
 - fix: close db cursors to remove rpmdb references on signal exit.
 
 * Tue Mar  4 2003 Jeff Johnson <jbj@redhat.com> 4.1.1-0.1
